--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,13 +79,18 @@ extra_javascript:
   - 'assets/vendor/mathjax/es5/tex-mml-chtml.js?math-csr'
   - '{OIWikiFeedbackSystemFrontendJS}' # see: scripts/pre-build/install-feedback-sys-frontend.ts
   - '{OIWikiFeedbackSystemFrontendContentScript}' # see: scripts/pre-build/install-feedback-sys-frontend.ts
-
+  # - '_static/js/mathjax.js'
+  # - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+  # - '_static/js/tex-mml-chtml.js'
+  - _static/js/katex.js
+  - https://unpkg.com/katex@0/dist/katex.min.js
+  - https://unpkg.com/katex@0/dist/contrib/auto-render.min.js
 
 extra_css:
   - '_static/css/extra.css?v=16'
   # - '_static/css/offset-inject-debug.css'
   - '{OIWikiFeedbackSystemFrontendCSS}' # see: scripts/pre-build/install-feedback-sys-frontend.ts
-
+  - https://unpkg.com/katex@0/dist/katex.min.css
 # Extensions
 markdown_extensions:
   # - document-offsets-injection:
