--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,7 +14,8 @@ nav:
     - 线段树: 数据结构/线段树.md
   - 游记:
     - LA:
-      - 游记test: 游记/LA/游记test.md
+      - NOI2024退役记: 游记/LA/NOI2024退役记.md
+      - 联合省选2024游记: 游记/LA/联合省选2024游记.md
     - Rubbish_Du:
       - 2024CSP-S 游寄: 游记/Rubbish_Du/2024CSP-S游寄.md
       - 2024OIFHA游记: 游记/Rubbish_Du/2024OIFHA游记.md
@@ -22,7 +23,7 @@ nav:
       - 中山一周行: 游记/qwerty111111/中山一周行.md
   - 闲话:
     - LA:
-      - 鲜花01: 闲话/LA/鲜花01.md
+      - 人类观察日记: 闲话/LA/人类观察日记.md
     - Danubius:
       - 典籍里の机房一: 闲话/Danubius/典籍里の机房一.md
       - 浅谈历史研究视角: 闲话/Danubius/浅谈历史研究视角.md
