--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
   - 简介: index.md
   - 语言基础:
     - 语言介绍: 语言基础/语言介绍.md
+    - 渐进时间复杂度: 语言基础/渐进时间复杂度.md
   - 数据结构:
     - 线段树: 数据结构/线段树.md
   - 游记:
