--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
     - 语言介绍: 语言基础/语言介绍.md
     - 渐进时间复杂度: 语言基础/渐进时间复杂度.md
   - 数据结构:
+    - 并查集: 数据结构/并查集.md
     - 线段树: 数据结构/线段树.md
   - 游记:
     - LA:
@@ -22,6 +23,8 @@ nav:
       - 2024OIFHA游记: 游记/Rubbish_Du/2024OIFHA游记.md
     - qwerty111111:
       - 中山一周行: 游记/qwerty111111/中山一周行.md
+    - loynyng_fasfy:
+      - CSP-S 2024 游记: 游记/loynyng_fasfy/CSP-S2024游记.md
   - 闲话:
     - LA:
       - 人类观察日记: 闲话/LA/人类观察日记.md
