--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,8 @@ nav:
       - 中山一周行: 游记/qwerty111111/中山一周行.md
     - loynyng_fasfy:
       - CSP-S 2024 游记: 游记/loynyng_fasfy/CSP-S2024游记.md
+    - dtbigwaves:
+      - CSP-S 2024游记: 游记/dtbigwaves/CSP-S2024游记.md
   - 闲话:
     - LA:
       - 人类观察日记: 闲话/LA/人类观察日记.md
