--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,10 +10,21 @@ nav:
   - 简介: index.md
   - 语言基础:
     - 语言介绍: 语言基础/语言介绍.md
+    - 语言基础: 语言基础/语言基础.md
+    - 常见容器及其常用函数: 语言基础/常见容器及其常用函数.md
     - 渐进时间复杂度: 语言基础/渐进时间复杂度.md
+  - 基础算法:
+    - 前缀和与差分: 基础算法/前缀和与差分.md
+    - 深度优先搜索: 基础算法/深度优先搜索.md
+    - 广度优先搜索: 基础算法/广度优先搜索.md
   - 数据结构:
     - 并查集: 数据结构/并查集.md
+    - 树状数组: 数据结构/树状数组.md
     - 线段树: 数据结构/线段树.md
+  - 图论:
+    - 树上差分: 图论/树上差分.md
+  - OI无关: 
+    - 如何用C++奏响《东方红》: OI无关/如何用C++奏响《东方红》.md 
   - 游记:
     - LA:
       - NOI2024退役记: 游记/LA/NOI2024退役记.md
@@ -27,6 +38,8 @@ nav:
       - CSP-S 2024 游记: 游记/loynyng_fasfy/CSP-S2024游记.md
     - dtbigwaves:
       - CSP-S 2024游记: 游记/dtbigwaves/CSP-S2024游记.md
+    - KccoT:
+      - csp s 游记: 游记/KccoT/csps游记.md
   - 闲话:
     - LA:
       - 人类观察日记: 闲话/LA/人类观察日记.md
@@ -35,6 +48,12 @@ nav:
       - 浅谈历史研究视角: 闲话/Danubius/浅谈历史研究视角.md
     - Rubbish_Du:
       - 我与OI: 闲话/Rubbish_Du/我与OI.md
+      - 简单子序列相关问题: 闲话/Rubbish_Du/简单子序列相关问题.md
+      - 警示后人: 闲话/Rubbish_Du/警示后人.md
+    - LosTcrab:
+      - 闲话——关于幸福: 闲话/LosTcrab/闲话——关于幸福.md
+    - qwerty111111:
+      - 机房一の恶战: 闲话/qwerty111111/机房一の恶战.md
 #[UI]
 # Theme
 theme:
