--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,8 @@ nav:
       - CSP-S 2024游记: 游记/dtbigwaves/CSP-S2024游记.md
     - KccoT:
       - csp s 游记: 游记/KccoT/csps游记.md
+    - caw0218:
+      - CSP-S 2024 游记: 游记/caw0218/CSP-S2024游记.md
   - 闲话:
     - LA:
       - 人类观察日记: 闲话/LA/人类观察日记.md
