--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,6 +51,7 @@ nav:
       - 我与OI: 闲话/Rubbish_Du/我与OI.md
       - 简单子序列相关问题: 闲话/Rubbish_Du/简单子序列相关问题.md
       - 警示后人: 闲话/Rubbish_Du/警示后人.md
+      - 故事集: 闲话/Rubbish_Du/故事集.md
     - LosTcrab:
       - 闲话——关于幸福: 闲话/LosTcrab/闲话——关于幸福.md
     - qwerty111111:
