--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@
 site_name: HYOI wiki   #网站名字
 site_description: We are HYOIer.
 site_author: HYOI #作者名
-site_url: https://lav2.top/wiki/  #网站地址
+site_url: https://lav2.top/  #网站地址
 # copyright: Copyright &copy; 2023 leoalasiaga # 左下角的版权声明
 
 # [Navigtion]
