--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,11 @@ nav:
     - 线段树: 数据结构/线段树.md
   - 图论:
     - 树上差分: 图论/树上差分.md
+  - 组合数学:
+    - 简介: 组合数学/简介.md
+    - 组合基础: 组合数学/组合基础.md
+  - 其它数学:
+    - 概率论: 其它数学/概率论.md
   - OI无关: 
     - 如何用C++奏响《东方红》: OI无关/如何用C++奏响《东方红》.md 
   - 游记:
