--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ nav:
     - 前缀和与差分: 基础算法/前缀和与差分.md
     - 深度优先搜索: 基础算法/深度优先搜索.md
     - 广度优先搜索: 基础算法/广度优先搜索.md
+    - 贪心: 基础算法/贪心.md
   - 数据结构:
     - 并查集: 数据结构/并查集.md
     - 树状数组: 数据结构/树状数组.md
