--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,8 @@ site_url: https://lav2.top/  #网站地址
 nav:
   - 简介: index.md
   - 语言基础:
-    - 语言基础: 语言基础/语言基础.md
+    - c++基础: 语言基础/c++基础.md
+    - 常见文本编辑器与IDE的使用: 语言基础/常见文本编辑器与IDE的使用.md
     - 常见容器及其常用函数: 语言基础/常见容器及其常用函数.md
     - 渐进时间复杂度: 语言基础/渐进时间复杂度.md
   - 基础算法:
