--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ nav:
   - 简介: index.md
   - 语言基础:
     - c++基础: 语言基础/c++基础.md
-    - 常见文本编辑器与IDE的使用: 语言基础/常见文本编辑器与IDE的使用.md
+    - 环境配置: 语言基础/环境配置.md
     - 常见容器及其常用函数: 语言基础/常见容器及其常用函数.md
     - 渐进时间复杂度: 语言基础/渐进时间复杂度.md
   - 基础算法:
