--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,7 +55,7 @@ nav:
       - 典籍里の机房一: 闲话/Danubius/典籍里の机房一.md
       - 浅谈历史研究视角: 闲话/Danubius/浅谈历史研究视角.md
     - Rubbish_Du:
-      - 故事集: 闲话/Rubbish_Du/故事集.md
+      - 闲话集: 闲话/Rubbish_Du/闲话集.md
       - 简单子序列相关问题: 闲话/Rubbish_Du/简单子序列相关问题.md
       - 警示后人: 闲话/Rubbish_Du/警示后人.md
     - LosTcrab:
