--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,8 @@ nav:
     - Rubbish_Du:
       - 2024CSP-S 游寄: 游记/Rubbish_Du/2024CSP-S游寄.md
       - 2024OIFHA游记: 游记/Rubbish_Du/2024OIFHA游记.md
+      - THUPC 2025 游玩记: 游记/Rubbish_Du/THUPC 2025 游玩记.md
+      - 2024NOIP游记: 游记/Rubbish_Du/2024NOIP游记.md
     - qwerty111111:
       - 中山一周行: 游记/qwerty111111/中山一周行.md
     - loynyng_fasfy:
@@ -55,6 +57,7 @@ nav:
       - 典籍里の机房一: 闲话/Danubius/典籍里の机房一.md
       - 浅谈历史研究视角: 闲话/Danubius/浅谈历史研究视角.md
     - Rubbish_Du:
+      - 故事集: 闲话/Rubbish_Du/故事集.md
       - 闲话集: 闲话/Rubbish_Du/闲话集.md
       - 简单子序列相关问题: 闲话/Rubbish_Du/简单子序列相关问题.md
       - 警示后人: 闲话/Rubbish_Du/警示后人.md
