--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
     - 线段树: 数据结构/线段树.md
   - 图论:
     - 树上差分: 图论/树上差分.md
+    - 静态点分治: 图论/静态点分治.md
   - 组合数学:
     - 简介: 组合数学/简介.md
     - 组合基础: 组合数学/组合基础.md
