--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
   - 图论:
     - 树上差分: 图论/树上差分.md
     - 树的直径: 图论/树的直径.md
+    - 树链剖分: 图论/树链剖分.md
     - 静态点分治: 图论/静态点分治.md
   - 组合数学:
     - 简介: 组合数学/简介.md
