--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ nav:
     - 广度优先搜索: 基础算法/广度优先搜索.md
     - 贪心: 基础算法/贪心.md
   - 数据结构:
+    - st表: 数据结构/st表.md
     - 并查集: 数据结构/并查集.md
     - 树状数组: 数据结构/树状数组.md
     - 线段树: 数据结构/线段树.md
