--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,7 @@ nav:
   - 闲话:
     - LA:
       - 无题: 闲话/LA/无题.md
+      - Goodbye, 2024: 闲话/LA/Goodbye, 2024.md
     - Danubius:
       - 典籍里の机房一: 闲话/Danubius/典籍里の机房一.md
       - 浅谈历史研究视角: 闲话/Danubius/浅谈历史研究视角.md
