--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,7 @@ nav:
       - 2024CSP-S 游寄: 游记/Rubbish_Du/2024CSP-S游寄.md
       - 2024NOIP游记: 游记/Rubbish_Du/2024NOIP游记.md
       - THUPC 2025 游玩记: 游记/Rubbish_Du/THUPC 2025 游玩记.md
+      - 202？省选—终与始: 游记/Rubbish_Du/202？省选—终与始.md
     - qwerty111111:
       - 中山一周行: 游记/qwerty111111/中山一周行.md
     - loynyng_fasfy:
