--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,8 @@ nav:
       - csp s 游记: 游记/KccoT/csps游记.md
     - caw0218:
       - CSP-S 2024 游记: 游记/caw0218/CSP-S2024游记.md
+    - Nahida_Official:
+      - PZG的游击: 游记/Nahida_Official/PZG的游击.md
   - 闲话:
     - LA:
       - 无题: 闲话/LA/无题.md
